[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
axum = { version = "0.8.4", features = ["multipart"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
multer = "3.1.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.22", features = ["json", "multipart", "stream", "cookies", "gzip", "brotli", "deflate", "rustls-tls", "blocking", "socks"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"

[[bin]]
name = "engine"
path = "src/engine.rs"
